@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-04T01:23:03Z",
+  "timestamp" : "2022-04-04T08:21:34Z",
   "count" : 0,
   "count_minmax" : [ 0, 0 ],
   "count_prev_day_inc" : 0,
-  "count_prev_day_dec" : 24,
+  "count_prev_day_dec" : 25,
   "uniques" : 0,
   "uniques_minmax" : [ 0, 0 ],
   "uniques_prev_day_inc" : 0,
